Added index content

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,11 @@
-<h1>{body.title}</h1>
+<h1>uptime-monitor</h1>
+<h2>Free simple uptime monitoring for HTTP/HTTPS sites.</h2>
+
+<div class="blurb">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis cumque adipisci deleniti ex, mollitia natus culpa officia dolorem nobis. Obcaecati illum aut maxime veniam facere reprehenderit quas voluptatum incidunt eaque.
+</div>
+
+<div class="ctaWrapper">
+    <a hraf="account/create" class="cta green">Get Started</a>
+    <a hraf="session/create" class="cta blue">Login</a>
+</div>
