--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,6 @@
 </div>
 
 <div class="ctaWrapper">
-    <a hraf="account/create" class="cta green">Get Started</a>
-    <a hraf="session/create" class="cta blue">Login</a>
+    <a href="account/create" class="cta green">Get Started</a>
+    <a href="session/create" class="cta blue">Login</a>
 </div>
